backman/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backman
spec:
  selector:
    matchLabels:
      app: backman
      app.service: backman
      app.service.component: gui
  replicas: 1
  template:
    metadata:
      labels:
        app: backman
        app.service: backman
        app.service.component: gui
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - backman
                - key: app.service
                  operator: In
                  values:
                  - backman
                - key: app.service.component
                  operator: In
                  values:
                  - gui
      containers:
      - name: backman
        image: jamesclonk/backman:1.15.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /metrics
            port: 8080
            httpHeaders:
            - name: Authorization
              value: ${BACKMAN_AUTH_HEADER}
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
          httpGet:
            path: /api/v1/states
            port: 8080
            httpHeaders:
            - name: Authorization
              value: ${BACKMAN_AUTH_HEADER}
