backman/base/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backman
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - backman.${KUBE_DOMAIN_ALPHA}
    - backman.${KUBE_DOMAIN_BETA}
    secretName: backman-tls
  rules:
  - host: backman.${KUBE_DOMAIN_ALPHA}
    http:
      paths:
      - backend:
          serviceName: backman
          servicePort: 8080
  - host: backman.${KUBE_DOMAIN_BETA}
    http:
      paths:
      - backend:
          serviceName: backman
          servicePort: 8080
